<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_doctor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.logeswarishanmugavel.medunsaid.AddDoctor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/addContactTitle"
            android:textStyle="bold"
            android:textSize="26sp"
            android:textColor="@color/pagetitle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/label"
            android:text="@string/addDrName"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:padding="10dp"
            android:textSize="18sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintName"
            android:layout_marginRight="15dp"
            android:padding="10dp"
            android:background="@drawable/edit_text_style"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/label"
            android:text="@string/addDrPhone"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:padding="10dp"
            android:textSize="18sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintPhone"
            android:layout_marginRight="15dp"
            android:padding="10dp"
            android:background="@drawable/edit_text_style"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/label"
            android:text="@string/addDrEmail"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:padding="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintEmail"
            android:layout_marginRight="15dp"
            android:padding="10dp"
            android:background="@drawable/edit_text_style"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/saveButton"
            android:layout_marginLeft="230dp"
            android:background="@color/colorPrimary"
            android:textColor="#ffffff"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:onClick="saveContact"/>

    </LinearLayout>

</RelativeLayout>
